# astropersonalised

./: .env.example  .gitignore  CLAUDE.md  README.md  astrotra.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2f561cea8069_initial_schema.py  d60d1f86d46b_add_saved_readings.py
apps/api/app/: astro_imports.py  config.py  database.py  main.py
apps/api/app/data/: celebrities.py
apps/api/app/models/: reading.py  user.py
apps/api/app/routers/: briefs.py  charts.py  readings.py  resonance.py  saved_readings.py
apps/api/app/services/: answer_composer.py  briefs.py  geocoding.py  query_router.py  resonance.py
convex/: auth.config.ts  (+9 more)
shastra-compute/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml  worker.ts  wrangler.jsonc
shastra-compute/src/: __init__.py  auth.py  config.py  main.py
shastra-compute/src/api/: __init__.py
shastra-compute/src/api/schemas/: brief.py  chart.py  reading.py  resonance.py
shastra-compute/src/api/v1/: brief.py  chart.py  reading.py  resonance.py
shastra-compute/src/core/: __init__.py  calculator.py  geocoding.py
shastra-compute/src/core/models/: __init__.py  chart.py
shastra-compute/src/data/: __init__.py  celebrities.py
shastra-compute/src/engines/: __init__.py  base.py  compare.py  kp.py  vedic.py  western.py
shastra-compute/src/services/: __init__.py  answer_composer.py  brief_service.py  llm_client.py  posthog_analytics.py  query_router.py  resonance_service.py
(+86 files in other folders)
